Make Navigation fixed to the top
This also prevents the nav on mobile from being positioned too far up when the nav-toggle button is clicked while it is partially visible (since the position does not get reset to the top of the screen when nav becomes visible).

--- a/components/navigation/navigation.module.scss
+++ b/components/navigation/navigation.module.scss
@@ -1,10 +1,11 @@
 .navigation {
-    position: relative;
+    position: fixed;
     z-index: 9999;
     display: flex;
     flex-direction: column;
     justify-content: center;
     height: 100px;
+    width: 100%;
     padding: 24px;
     padding-right: 0;
 
@@ -104,6 +105,7 @@
 @media screen and (min-width: 721px) {
     .navigation {
         padding-right: 24px;
+        background-color: var(--color-primary);
 
         .nav-toggle {
             display: none;
