--- a/sections/landing/landing.module.scss
+++ b/sections/landing/landing.module.scss
@@ -2,6 +2,7 @@
     position: relative;
     height: calc(100vh - 100px);
     width: 100vw;
+    margin-top: 100px;
     padding: 0 32px;
     overflow: hidden !important;
 
